--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-:root {
-}
-
-* {
-  /* This ensures all element widths include border and padding width */
-  box-sizing: border-box;
-}
-
 body {
   max-width: 1800px;
   color: black;
@@ -25,23 +17,6 @@ h2 {
   text-shadow: 1px 1px 3px #000;
 }
 
-button {
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  border-radius: 5px;
-  margin: 20px;
-  width: 120px;
-  color: white;
-  transition: all 1s ease;
-  box-shadow: 2px 2px 5px #000;
-}
-
-button:hover,
-button:focus {
-  filter: brightness(0.8);
-}
-
 hr {
   border: 0;
   margin: 0;
@@ -51,27 +26,24 @@ hr {
 }
 
 a {
-  color: #d4d5ff;
+  color: #000fa3;
   text-decoration: none;
   transition: all 1s ease;
 }
 
 a:visited {
-  /* change color when user visits link */
-  color: #955ead;
+  color: #a3003e;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  /* remove underline/change colour
-  on hover or focus */
   text-decoration: underline;
+  cursor: pointer;
 }
 
 a:active {
-  /* selected link color */
-  color: #d2a8ff;
+  color: #ff0000;
 }
 
 /* -- Flex styling for header --------- */
@@ -141,24 +113,6 @@ a:active {
     3px 3px 5px #000;
 }
 
-/* -- ID styling -------------- */
-
-#myLogo {
-  padding: 0;
-  box-shadow: 2px 2px 4px #000;
-}
-
-#userInput {
-  font-size: 36px;
-  font-weight: bolder;
-  font-variant:small-caps;
-  text-shadow: 2px 2px 3px #fff;
-}
-
-#userForm {
-  background: rgba(247, 250, 255, 0.5);
-}
-
 .photoButton {     /* buttons are grid items as well */
   font-family: 'Oswald', sans-serif;
   font-size: 14px;
@@ -182,50 +136,51 @@ a:active {
     2px 2px 5px #000;
 }
 
-.thumb {
-  object-fit: scale-down;
-}
-
 .photoButton:hover,
 .photoButton:focus {
   cursor: pointer;
   filter: brightness(0.8);
 }
 
+/* -- ID styling -------------- */
+
+#myLogo {
+  padding: 0;
+  box-shadow: 2px 2px 4px #000;
+}
+
+#userInput {
+  font-size: 36px;
+  font-weight: bolder;
+  font-variant:small-caps;
+  text-shadow: 2px 2px 3px #fff;
+}
+
+#userForm {
+  background: rgba(247, 250, 255, 0.5);
+}
+
+#submitButton {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  margin: 20px;
+  width: 120px;
+  color: white;
+  transition: all 1s ease;
+  box-shadow: 2px 2px 5px #000;
+}
+
+#submitButton:hover,
+#submitButton:focus {
+  filter: brightness(0.8);
+}
+
 /* ------------ Modal Styling --------------------------- */
 
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  display: block;
-
-  /* the modal container is the wider overlay, eg transparent grey to cover rest of screen */
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough */
-  overflow: auto;
-}
-
-.modal {
-  margin: auto;
-  display: grid;
-  box-sizing: border-box;
+.modal-dialog {
   background-color: #43455c;
-  background-image: linear-gradient(to bottom, rgba(18, 19, 33, 0.7), rgba(18, 19, 33, 0.1));
-  padding: 15px;
-  width: 100%;
+  background-image: linear-gradient(to bottom, rgba(18, 19, 33, 0.9), rgba(174, 176, 209, 0.3));
   max-width: 700px;
   text-align: center;
   box-shadow: 2px 2px 5px #01021c;
@@ -233,25 +188,8 @@ a:active {
   transition: all 1s ease;
 }
 
-.modal-close {
-  float: right;
-  border: 1px;
-  background: #f07c00;
-  color: #fff;
-  text-decoration: none;
-  box-shadow: 2px 2px 3px #620;
-}
-
-.modal h1 {
-  margin-top: 10%;
-  font-family: 'Oswald', sans-serif;
-  font-size: 30px;
-}
-
-.modal ul {
-  float: left;
-  list-style: none;
-  margin-top: 0px;
+.list-group-item {
+  background: #d5d7eb;
 }
 
 /* --------------- media queries required ----------------*/
@@ -276,6 +214,9 @@ a:active {
     height: 80px;
     width: 200px;
     background-size: cover;
+  }
+  .photoImage {
+    width: 250px;
   }
 }
 
