--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,36 @@ a:active {
     3px 3px 5px #000;
 }
 
+.hideNoHits {
+  visibility: hidden;
+  height: auto;
+  z-index: 1000;
+  position: fixed;
+  top: 40%;
+  left: 48%;
+  margin-top: -10px;
+  margin-left: -4.5em;
+  width: 14em;
+  font-family: 'Oswald', sans-serif;
+  font-variant: normal;
+  font-size: 24px;
+  text-align: center;
+  justify-content: space-around;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 5px;
+  background: #940000;
+  color: white;
+  box-shadow:
+    2px 3px 3px #fff inset,
+    3px 3px 5px #000;
+}
+
+.noHits {
+  visibility: visible;
+}
+
 .photoButton {
   font-family: 'Oswald', sans-serif;
   font-size: 14px;
