--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,6 @@ a:active {
 .photoButton {
   font-family: 'Oswald', sans-serif;
   font-size: 14px;
-  text-align: center;
   text-shadow: 1px 1px 2px #000;
   border-style: solid;
   padding-top: 0.4rem;
@@ -150,13 +149,11 @@ a:active {
   border-color: black;
   border-radius: 5px;
   background: #00193b;
-  height: 160px;
-  width: 280px;
-  margin: 0 auto;
+  height: 240px;
   color: #fff;
   filter: brightness(1);
   transition: all 1s ease;
-  background-size: cover;
+  background-size: contain;
   box-shadow:
     2px 3px 3px #fff inset,
     2px 2px 5px #000;
@@ -245,6 +242,7 @@ a:active {
 .modal-dialog {
   background-color: #43455c;
   max-width: 700px;
+  max-height: 1000px;
   text-align: center;
   box-shadow: 2px 2px 5px #01021c;
   border-radius: 8px;
@@ -272,8 +270,13 @@ a:active {
 
   .photoButton {
     margin: 14px;
-    height: 100px;
-    width: 300px;
+    height: 200px;
+    width: 400px;
+  }
+
+  .photoImage {
+    max-width: 210px;
+    max-height: 500px;
   }
 
   .hideNoHits {
@@ -319,9 +322,9 @@ a:active {
   .photoButton {
     font-size: 14px;
     margin: 10px;
-    height: 80px;
-    width: 240px;
-    background-size: cover;
+    height: 200px;
+    width: 300px;
+    background-size: contain;
   }
 
   .photoImage {
@@ -376,13 +379,13 @@ a:active {
 
 @media all and (max-width: 330px) {
   .photoImage {
-    width: 270px;
+    max-width: 270px;
   }
 }
 
 @media all and (max-width: 300px) {
   .photoImage {
-    width: 230px;
+    max-width: 250px;
   }
 
   .hideNoHits {
