Navbar Alignment for small screens
Navbar made flex column for small screens.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -157,11 +157,11 @@ a:active {
   background: #940000;
   color: white;
   -webkit-box-shadow:
-    2px 3px 3px #fff inset,
-    3px 3px 5px #000;
+    1px 1px 2px #fff inset,
+    2px 2px 3px #000;
           box-shadow:
-    2px 3px 3px #fff inset,
-    3px 3px 5px #000;
+    1px 1px 2px #fff inset,
+    2px 2px 3px #000;
 }
 
 .noHits {
@@ -341,6 +341,18 @@ a:active {
     font-size: 14px;
   }
 
+  .dataLoading,
+  .hideDataLoading {
+    font-size: 14px;
+    text-align: center;
+    -webkit-box-shadow:
+      1px 1px 2px #fff inset,
+      2px 2px 3px #000;
+            box-shadow:
+      1px 1px 2px #fff inset,
+      2px 2px 3px #000;
+  }
+
   #myLogo {
     width: 150px;
   }
@@ -373,6 +385,14 @@ a:active {
   }
 
   .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
     height: 280px;
   }
 
@@ -392,14 +412,34 @@ a:active {
     font-size: 14px;
   }
 
+  .dataLoading,
+  .hideDataLoading {
+    top: 30%;
+    left: 47%;
+    font-size: 20px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding-top: 0.2rem;
+    -webkit-box-shadow:
+      1px 1px 2px #fff inset,
+      2px 2px 3px #000;
+            box-shadow:
+      1px 1px 2px #fff inset,
+      2px 2px 3px #000;
+  }
+
   #modalReopen {
     margin: 0 auto;
   }
 
-  #userInput,
-  #userChoice {
+  #userInput {
     font-size: 16px;
-    width: 250px;
+    width: 200px;
+  }
+
+  #userChoice {
+    font-size: 14px;
+    width: 200px;
   }
 
   #myLogo {
@@ -455,12 +495,12 @@ a:active {
   }
 
   #userInput {
-    font-size: 20px;
+    font-size: 16px;
     width: 215px;
   }
 
   #userChoice {
-    font-size: 14px;
-    width: 210px;
+    font-size: 12px;
+    width: 190px;
   }
 }
